css/style.css
:root {
    --achromatic: 0, 0%;  /* neutral color */
    --bg-color: hsl(var(--achromatic), 96%);
    --font-color: hsl(var(--achromatic), 20%);

    --accent-color: hsl(200, 50%, 55%);
	--accent2: hsl(0, 50%, 55%);
	
	--spacing: 3vw;
	--rounded-corners: 5px;
}

* {
    box-sizing: border-box;
}

html {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    margin: 0;
    padding: 0;
    background: url("../svg/circuit-board.svg"), var(--bg-color);
    background-size: 200px, cover;
}

body {
    margin: var(--spacing);
    color: var(--font-color);
    font-family: 'Dosis', sans-serif;
    font-size: 100%;
	background-color: var(--bg-color);
	border-radius: 5px;
}

ul, h1, h2, h3, p {
    margin: 0;
    padding: 0;
}

/*
-------------------------------------------------------------------
HEADER
-------------------------------------------------------------------
*/

header {
    width: 100%;
    padding: var(--spacing);
    background-color: hsl(var(--achromatic), 100%);
    display: flex;
    justify-content: space-between;
	box-shadow: 0 0px 15px hsl(var(--achromatic), 70%);
	border-radius: var(--rounded-corners) var(--rounded-corners) 0 0;
	/*position: sticky;
	top: 0;*/
}

h1 {
    font-size: 5rem;
    text-transform: uppercase;
    line-height: 100%;
    margin-bottom: 1rem;
}

h2 {
    font-size: 2rem;
    margin-bottom: 1rem;
}

header ul {
    list-style-type: none;
    display: flex;
    gap: 20px;
}

header ul img {
    width: 50px;
	filter: invert(20%) brightness(100%);
}

header p img {
    width: 30px;
    margin-right: 10px;
	filter: invert(20%) brightness(100%);
}

header p {
    font-size: 1.4rem;
	margin-bottom: 1rem;
}

header > img {
    border: 5px solid hsl(var(--achromatic), 95%);
    width: 280px;
    height: 280px;
    border-radius: 50%;
}

/*
-------------------------------------------------------------------
SECTION
-------------------------------------------------------------------
*/

section {
	padding: var(--spacing);
}

section + section {
	padding-top: 0;
}

h3 {
	flex: 1 0 100%;
	font-size: 1.5rem;
	margin-bottom: 1rem;
	text-transform: uppercase;
}

section > div {
	width: 100%;
	padding: 15px;
	margin-bottom: 15px;
	background-color: hsl(var(--achromatic), 100%);
	box-shadow: 0 2px 2px hsl(var(--achromatic), 90%);
	font-size: 1.2rem;
	display: flex;
	justify-content: space-between;
	border-radius: var(--rounded-corners);
	border-left: 4px solid var(--accent-color);
	column-gap: var(--spacing);
}

section > div:last-of-type {
	margin-bottom: 0;
}

#language {
	display: flex;
	flex-wrap: wrap;
	column-gap: 4%;
}

#language > div {
	flex: 0 0 22%;
	height: fit-content;
	border-left: 4px solid var(--accent2);
}

/*
-------------------------------------------------------------------
FOOTER
-------------------------------------------------------------------
*/

footer {
	width: 100%;
	padding: var(--spacing);
	background-color: hsl(var(--achromatic), 20%);
	color: hsl(var(--achromatic), 90%);
	border-radius: 0 0 var(--rounded-corners) var(--rounded-corners);
}

/*
-------------------------------------------------------------------
MEDIA QUERIES
-------------------------------------------------------------------
*/
@media (prefers-color-scheme: dark) {
    :root {
        --bg-color: hsl(var(--achromatic), 10%);
        --font-color: hsl(var(--achromatic), 80%);
    }
}

@media only screen and (max-width: 450px) and (orientation: portrait) {
	:root {
		--spacing: 4.5vw;
	}
	header {
		flex-direction: column-reverse;
	}
	
	header > img {
		margin: 0 auto;
	}
	
	h1 {
		font-size: 3.2rem;
		margin-top: 1rem;
	}
	
	section > div {
		flex-direction: column-reverse;
	}
	
	#language > div {
		flex: 0 0 48%;
	}
}

